// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table with data manipulation should display filtered and sorted data (Marketing department, sorted by salary) 1`] = `
"[01m   Marketing Department (Sorted by   
               Salary)               [0m
┌────┬────────┬────────────┬────────┐
│[37m [0m[01mid[0m │[37m [0m[01mname  [0m │[37m [0m[01mdepartment[0m │[37m [0m[01msalary[0m │
├────┼────────┼────────────┼────────┤
│[37m [0m[37m5 [0m │[37m [0m[37mEdward[0m │[37m [0m[37mMarketing [0m │[37m [0m[37m 82000[0m │
│[37m [0m[37m2 [0m │[37m [0m[37mBob   [0m │[37m [0m[37mMarketing [0m │[37m [0m[37m 78000[0m │
└────┴────────┴────────────┴────────┘"
`;

exports[`Table with data manipulation should display filtered data (Engineering department only) 1`] = `
"[01m        Engineering Department         [0m
┌────┬─────────┬─────────────┬────────┐
│[37m [0m[01mid[0m │[37m [0m[01mname   [0m │[37m [0m[01mdepartment [0m │[37m [0m[01msalary[0m │
├────┼─────────┼─────────────┼────────┤
│[37m [0m[37m1 [0m │[37m [0m[37mAlice  [0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 95000[0m │
│[37m [0m[37m3 [0m │[37m [0m[37mCharlie[0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 92000[0m │
│[37m [0m[37m6 [0m │[37m [0m[37mFiona  [0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 99000[0m │
└────┴─────────┴─────────────┴────────┘"
`;

exports[`Table with data manipulation should display sorted data (salary ascending) 1`] = `
"[01mEmployees Sorted by Salary (Ascending) [0m
┌────┬─────────┬─────────────┬────────┐
│[37m [0m[01mid[0m │[37m [0m[01mname   [0m │[37m [0m[01mdepartment [0m │[37m [0m[01msalary[0m │
├────┼─────────┼─────────────┼────────┤
│[37m [0m[37m4 [0m │[37m [0m[37mDiana  [0m │[37m [0m[37mHR         [0m │[37m [0m[37m 67000[0m │
│[37m [0m[37m2 [0m │[37m [0m[37mBob    [0m │[37m [0m[37mMarketing  [0m │[37m [0m[37m 78000[0m │
│[37m [0m[37m5 [0m │[37m [0m[37mEdward [0m │[37m [0m[37mMarketing  [0m │[37m [0m[37m 82000[0m │
│[37m [0m[37m3 [0m │[37m [0m[37mCharlie[0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 92000[0m │
│[37m [0m[37m1 [0m │[37m [0m[37mAlice  [0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 95000[0m │
│[37m [0m[37m6 [0m │[37m [0m[37mFiona  [0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 99000[0m │
└────┴─────────┴─────────────┴────────┘"
`;

exports[`Table with data manipulation should display sorted data (salary descending) 1`] = `
"[01mEmployees Sorted by Salary (Descending)[0m
┌────┬─────────┬─────────────┬────────┐
│[37m [0m[01mid[0m │[37m [0m[01mname   [0m │[37m [0m[01mdepartment [0m │[37m [0m[01msalary[0m │
├────┼─────────┼─────────────┼────────┤
│[37m [0m[37m6 [0m │[37m [0m[37mFiona  [0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 99000[0m │
│[37m [0m[37m1 [0m │[37m [0m[37mAlice  [0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 95000[0m │
│[37m [0m[37m3 [0m │[37m [0m[37mCharlie[0m │[37m [0m[37mEngineering[0m │[37m [0m[37m 92000[0m │
│[37m [0m[37m5 [0m │[37m [0m[37mEdward [0m │[37m [0m[37mMarketing  [0m │[37m [0m[37m 82000[0m │
│[37m [0m[37m2 [0m │[37m [0m[37mBob    [0m │[37m [0m[37mMarketing  [0m │[37m [0m[37m 78000[0m │
│[37m [0m[37m4 [0m │[37m [0m[37mDiana  [0m │[37m [0m[37mHR         [0m │[37m [0m[37m 67000[0m │
└────┴─────────┴─────────────┴────────┘"
`;
